k8s/apps/accounting/gramps-web/svc.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: gramps-web
  namespace: gramps-web
  labels:
    app.kubernetes.io/name: gramps-web
    app.kubernetes.io/instance: gramps-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gramps-web
    app.kubernetes.io/instance: gramps-web
  ports:
    - name: http
      port: 5000
      targetPort: http
      protocol: TCP
