k8s/apps/accounting/gramps-web/ingress.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gramps-web
  namespace: gramps-web
  labels:
    app.kubernetes.io/name: gramps-web
    app.kubernetes.io/instance: gramps-web
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: ingress-external-traefik
  rules:
    - host: gramps.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gramps-web
                port:
                  name: http
